--- a/app/src/main/res/layout/activity_atur_terima_part.xml
+++ b/app/src/main/res/layout/activity_atur_terima_part.xml
@@ -45,10 +45,11 @@
                     android:layout_weight="4"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="TIPE SUPPLIER"
+                    android:text="@string/tipe_supplier_uppercase"
                     android:textColor="@color/grey_900"
                     android:textSize="12sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_gravity="center" />
 
                 <RelativeLayout
                     android:layout_width="0dp"
@@ -87,10 +88,11 @@
                     android:textStyle="bold" />
 
                 <RelativeLayout
+                    android:id="@+id/vg_kontak"
                     android:layout_width="0dp"
                     android:layout_height="34dp"
                     android:layout_weight="6"
-                    android:background="@drawable/background_edittext">
+                    android:background="@drawable/state_textview_clickable_border">
 
                     <TextView
                         android:id="@+id/txtNamaSupplier"
@@ -106,6 +108,59 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/ly_nama_principal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/paddingSemiLarge"
+                android:layout_marginBottom="@dimen/paddingMedium"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="4"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nama_principial_uppercase"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/state_textview_clickable_border">
+
+                    <Spinner
+                        android:id="@+id/sp_nama_principal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tl_nama_perusahaan"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
+
+                <EditText
+                    android:id="@+id/et_nama_perusahaan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/nama_perusahaan_uppercase"
+                    android:inputType="textCapCharacters"
+                    android:textSize="14sp"
+                    tools:ignore="Autofill" />
+
+            </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -117,9 +172,10 @@
                     android:id="@+id/txtNoDo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="NO. DO"
+                    android:hint="@string/no_do_invoice_uppercase"
                     android:inputType="textCapCharacters"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    tools:ignore="Autofill" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -203,14 +259,13 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ly_rek"
+                android:id="@+id/ly_norek"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/paddingSemiLarge"
                 android:layout_marginBottom="@dimen/paddingMedium"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:visibility="gone">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
@@ -223,10 +278,11 @@
 
 
                 <RelativeLayout
+                    android:id="@+id/vg_no_rek"
                     android:layout_width="0dp"
                     android:layout_height="34dp"
                     android:layout_weight="6"
-                    android:background="@drawable/background_edittext">
+                    android:background="@drawable/state_textview_clickable_border">
 
                 <Spinner
                     android:id="@+id/sp_rekAsal_terimaPart"
@@ -238,32 +294,69 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/layout_jatuh_tempo"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tl_nota"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/border_solid"
-                android:orientation="horizontal"
-                android:padding="10dp"
-                android:visibility="gone">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
 
-                <TextView
-                    android:id="@+id/textView40"
-                    android:layout_width="170dp"
-                    android:layout_height="wrap_content"
-                    android:text="JATUH TEMPO INVOICE"
+                <EditText
+                    android:id="@+id/et_notaTrace_jurnal"
+                    android:layout_width="match_parent"
+                    android:inputType="textCapCharacters"
                     android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:layout_height="wrap_content"
+                    android:hint="@string/no_nota_trace_uppercase"
+                    tools:ignore="Autofill" />
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <LinearLayout
+                android:id="@+id/ly_tgl_jatuh_tempo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="@dimen/paddingMedium"
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/jatuhTempo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:drawableLeft="@drawable/icon_tanggal"
-                    android:gravity="center"
-                    android:textStyle="bold" />
+                    android:layout_gravity="center"
+                    android:layout_weight="3.8"
+                    android:text="@string/tanggal_jatuh_tempo_uppercase"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="10dp" />
+
+                <RelativeLayout
+                    android:id="@+id/vg_tgl_jatuh_tempo"
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/state_textview_clickable_border">
+
+                    <TextView
+                        android:id="@+id/tv_tgl_jatuh_tempo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="3dp"
+                        android:gravity="center"
+                        android:textAlignment="center"
+                        android:drawablePadding="10dp"
+                        android:layout_marginBottom="3dp"
+                        android:textColor="@color/grey_900"
+                        android:drawableStart="@drawable/icon_tanggal" />
+
+                </RelativeLayout>
 
             </LinearLayout>
 
