--- a/app/src/main/res/layout/activity_registrasi_bengkel_.xml
+++ b/app/src/main/res/layout/activity_registrasi_bengkel_.xml
@@ -159,7 +159,7 @@
                     android:layout_weight="6"
                     android:background="@drawable/background_edittext">
 
-                    <com.rkrzmail.srv.MultiSelectionSpinner
+                    <Spinner
                         android:id="@+id/sp_jenisKendaraan_regist"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
