--- a/app/src/main/res/layout/activity_atur_biaya_mekanik.xml
+++ b/app/src/main/res/layout/activity_atur_biaya_mekanik.xml
@@ -169,7 +169,7 @@
                 android:layout_margin="10dp"
                 android:background="@drawable/btn_rounded_accent"
                 android:text="Simpan"
-                android:textColor="@color/white_transparency" />
+                android:textColor="@android:color/white" />
 
         </LinearLayout>
 
