--- a/app/src/main/res/layout/activity_atur_jurnal_.xml
+++ b/app/src/main/res/layout/activity_atur_jurnal_.xml
@@ -140,7 +140,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginTop="15dp">
+                    android:layout_marginTop="15dp"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="0dp"
