--- a/app/src/main/res/layout/activity_atur_komisi_terbayar.xml
+++ b/app/src/main/res/layout/activity_atur_komisi_terbayar.xml
@@ -23,7 +23,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
                 android:orientation="horizontal">
@@ -166,14 +165,14 @@
 
 
             <Button
-                android:id="@+id/btn_simpan_cashCollection"
+                android:id="@+id/btn_simpan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_marginTop="@dimen/paddingLarge"
                 android:layout_marginBottom="@dimen/spacing_large"
                 android:background="@drawable/btn_rounded_accent"
-                android:text="Simpan"
+                android:text="@string/simpan_uppercase"
                 android:textColor="@android:color/white" />
 
         </LinearLayout>
