--- a/app/src/main/res/layout/activity_atur_terima_part.xml
+++ b/app/src/main/res/layout/activity_atur_terima_part.xml
@@ -95,7 +95,7 @@
                     android:background="@drawable/state_textview_clickable_border">
 
                     <TextView
-                        android:id="@+id/txtNamaSupplier"
+                        android:id="@+id/tv_nama_supplier"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:drawableLeft="@drawable/ic_contact_phone"
@@ -109,7 +109,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/ly_nama_principal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/paddingSemiLarge"
@@ -128,6 +127,7 @@
 
 
                 <RelativeLayout
+                    android:id="@+id/ly_nama_principal"
                     android:layout_width="0dp"
                     android:layout_height="34dp"
                     android:layout_weight="6"
@@ -144,23 +144,40 @@
             </LinearLayout>
 
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/tl_nama_perusahaan"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
 
-                <EditText
-                    android:id="@+id/et_nama_perusahaan"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tl_nama_perusahaan"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/nama_perusahaan_uppercase"
-                    android:inputType="textCapCharacters"
-                    android:textSize="14sp"
-                    tools:ignore="Autofill" />
+                    android:layout_height="wrap_content">
 
-            </android.support.design.widget.TextInputLayout>
+                    <com.rkrzmail.srv.NikitaAutoComplete
+                        android:id="@+id/et_nama_perusahaan"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/nama_perusahaan_uppercase"
+                        android:inputType="textCapCharacters"
+                        android:textSize="14sp"
+                        tools:ignore="Autofill"
+                        android:padding="15dp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <ProgressBar
+                    android:id="@+id/progress_bar"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|right"
+                    android:layout_marginEnd="10dp"
+                    tools:ignore="RtlHardcoded"
+                    android:visibility="gone"/>
+
+            </FrameLayout>
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -302,7 +319,7 @@
                 android:layout_marginTop="5dp">
 
                 <EditText
-                    android:id="@+id/et_notaTrace_jurnal"
+                    android:id="@+id/et_no_trace"
                     android:layout_width="match_parent"
                     android:inputType="textCapCharacters"
                     android:textSize="14sp"
