--- a/app/src/main/res/layout/activity_penyesuain.xml
+++ b/app/src/main/res/layout/activity_penyesuain.xml
@@ -29,7 +29,7 @@
         </android.support.design.widget.AppBarLayout>
 
         <LinearLayout
-            android:id="@+id/layout_penugasan"
+            android:id="@+id/ly_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
