--- a/app/src/main/res/layout/fragment_dashboard_angka.xml
+++ b/app/src/main/res/layout/fragment_dashboard_angka.xml
@@ -787,6 +787,113 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:cardCornerRadius="2dp"
+                    app:cardElevation="2dp"
+                    android:layout_marginTop="10dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:baselineAligned="false">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            android:paddingEnd="20dp"
+                            tools:ignore="RtlSymmetry">
+
+                            <TextView
+                                android:id="@+id/tv_total_penjualan_harian"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/default_rp_uppercase"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                                android:textSize="12sp"
+                                android:textColor="@color/grey_900" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/penjualan_hari_uppercase"
+                                android:textAlignment="center"
+                                android:layout_gravity="center"
+                                android:gravity="center"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                                android:textSize="12sp"
+                                android:layout_marginTop="5dp"
+                                android:textColor="@color/grey_900" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:layout_gravity="center">
+
+                            <TextView
+                                android:id="@+id/tv_total_unit_harian"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/default_number"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/unit_hari_uppercase"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                                android:textSize="12sp"
+                                android:layout_marginTop="5dp"
+                                tools:ignore="SmallSp" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:layout_gravity="center"
+                            android:paddingStart="20dp">
+
+                            <TextView
+                                android:id="@+id/tv_total_margin_harian"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/default_rp_uppercase"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/margin_part_uppercase"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                                android:textSize="12sp"
+                                android:layout_marginTop="5dp"
+                                tools:ignore="SmallSp" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     app:cardCornerRadius="2dp"
                     app:cardElevation="2dp"
