--- a/app/src/main/res/layout/item_hutang_usaha.xml
+++ b/app/src/main/res/layout/item_hutang_usaha.xml
@@ -25,7 +25,8 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:padding="10dp"
-            android:stretchColumns="*">
+            android:stretchColumns="*"
+            card_view:ignore="UselessParent">
 
             <TableRow>
 
@@ -44,14 +45,14 @@
             <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
                 <TextView
-                    android:id="@+id/tv_no_ponsel"
+                    android:id="@+id/tv_tgl_transaksi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/no_ponsel"
+                    android:text="@string/tanggal"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                     android:textColor="@color/grey_900"
                     android:textSize="12sp"
-                    android:layout_gravity="start"/>
+                    android:layout_gravity="start" />
 
                 <TextView
                     android:id="@+id/tv_tgl_jatuh_tempo"
@@ -78,10 +79,6 @@
                     android:textSize="12sp"
                     android:layout_gravity="start" />
 
-            </TableRow>
-
-            <TableRow android:layout_marginTop="@dimen/spacing_medium">
-
                 <TextView
                     android:id="@+id/tv_total_hutang"
                     android:layout_width="wrap_content"
@@ -90,7 +87,7 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                     android:textColor="@color/grey_900"
                     android:textSize="12sp"
-                    android:layout_gravity="start"/>
+                    android:layout_gravity="end"/>
 
             </TableRow>
 
