--- a/app/src/main/res/layout/item_transaksi_piutang.xml
+++ b/app/src/main/res/layout/item_transaksi_piutang.xml
@@ -25,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"/>
+            android:layout_marginEnd="5dp"
+            android:checked="false"/>
 
         <TableLayout
             android:layout_width="match_parent"
